updates to styles and content

--- a/index4.html
+++ b/index4.html
@@ -36,10 +36,10 @@
                       <div class="col l10 flow-text yellowblue" height="300px">
                         <span>
                         <h3>About Alex Merced</h3>
-                        Alex Merced is shifting his career from over a decade in corporate training, marketing and small business to become a Full Stack Developer. Alex Merced is specializing in development using React, Materalize, StencilJS and Bootstrap on the frontend and Python/Django/NodeJS on the backend. Alex Merced also hopes to learn about C# the .Net Core framework for backend development.<br><Br>
+                        Alex Merced is an effective problem solver and constant learner. He hopes to use his growing technology knowledge and skills to help build quality and disruptive applications on web, mobile and desktop. Alex Merced has his <a href="https://open.spotify.com/show/1kMcquypdIElTu4Nu98XPM">"Web Dev 101 Podcast"</a> and <a href="https://www.youtube.com/channel/UCoc4UCEetAt3htM3hV1dQgQ">Youtube channel</a> where he educates about he has learned. Alex spent 11 years in corporate training so his ability to learn new information and share it with other is effective. <br><Br>
 
                         Alex Merced has studied a variety of different programming languages (C, C++, C#, Python, Java, Javascript, Ruby, PHP, and Swift) and is always seeking to learn the basics of more to stay sharp and ahead of market trends. By exploring the links on this website you can find more information about Alex Merced's experience, projects and knowledge.<br>
-                        <a href="index.html">This site styled with self-made CSS</a><br>
+                        <a href="index3.html">This site styled with self-made CSS</a><br>
                         <a href="index4.html">This site styled using Materialize</a><br>
                         <a href="index2.html">This site styled using Bootstrap</a><br>
                         </span></div>
