adding updated files

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Alex Merced - Full Stack Developer</title>
+    <link href="https://fonts.googleapis.com/css?family=Hind+Guntur&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./front.css">
 </head>
 <body>
@@ -13,10 +14,16 @@
     <center><iframe width="50%" height="315px" src="https://www.youtube.com/embed/nawRt_xO9U4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
 <Br><Br>
     <main>
-    <div><a href="http://alexmercedcoder.github.io">Merced's Developer<br>Portfolio Page</a></div>
-    <div><a href="index3.html">AlexMercedCoder.com<br>website</a></div>
-    <div><a href="https://www.youtube.com/channel/UCoc4UCEetAt3htM3hV1dQgQ">Alex Merced's Explains<br>Computer Science and Programming<br>Concepts Videos</a></div>
-    <div><a href="https://open.spotify.com/show/1kMcquypdIElTu4Nu98XPM">Alex Merced's<br>Web Development 101<br>Podcast</a></div>
-    </main>
+    <a href="http://alexmercedcoder.github.io">Merced's Developer<br>Portfolio Page</a>
+    <a href="https://spark.adobe.com/page/zj2OlDFEeLGyt/">Alex Merced's<br>Non-Developer Skills</a>
+    <a href="index3.html">AlexMercedCoder.com<br>website</a>
+    <a href="https://www.youtube.com/channel/UCoc4UCEetAt3htM3hV1dQgQ">Alex Merced's Explains<br>Computer Science and Programming<br>on Youtube</a>
+    <a href="https://open.spotify.com/show/1kMcquypdIElTu4Nu98XPM">Alex Merced's<br>Web Development 101<br>Podcast</a>
+    <a href="https://medium.com/@willcodeforfood_96619">Alex Merced's<br>Articles<br>on Medium</a>
+    <a href="https://sites.google.com/view/ambootcampprojects/home">Alex Merced<br>Coding Bootcamp<br>Project Gallery</a>
+    <a href="https://alexmercedcoder.github.io/alexmerceddevblog">Alex Merced<br>Dev Blog</a>
+    <a href="https://join.slack.com/t/amwebdev/shared_invite/enQtNzc4NDA3MDU3MDE0LTZjNjIyZmQ3MzA5Y2Q3MWUwZjk3NTIyYjliOThlMWFjNTFkYWM1OGUxN2Y3NGExNGVhOGIzZTg0YTJjZTk5NDA">Web Developer<br>Networking<br>Slack</a>
+
+</main>
 </body>
 </html>
