--- a/index3.html
+++ b/index3.html
@@ -34,7 +34,7 @@
               <div class = "heroimage container group">
                       <div class="textbox1">
                         <h3>About Alex Merced</h3>
-                        <p>Alex Merced is an effective problem solver and constant learner. He hopes to use his growing technology knowledge and skills to help build quality and disruptive applications on web, mobile and desktop. Alex Merced has his <a href="https://open.spotify.com/show/1kMcquypdIElTu4Nu98XPM">"Web Dev 101 Podcast"</a> and <a href="https://www.youtube.com/channel/UCoc4UCEetAt3htM3hV1dQgQ">Youtube channel</a> where he educates about he has learned. Alex spent 11 years in corporate training so his ability to learn new information and share it with other is effective. </p>
+                        <p>Alex Merced is an effective problem solver and constant learner. He hopes to use his growing technology knowledge and skills to help build quality and disruptive applications on web, mobile and desktop. Alex Merced has his <a href="https://open.spotify.com/show/1kMcquypdIElTu4Nu98XPM">"Web Dev 101 Podcast"</a> and <a href="https://www.youtube.com/channel/UCoc4UCEetAt3htM3hV1dQgQ">Youtube channel</a> where he educates about what he has learned. Alex spent 11 years in corporate training so his ability to learn new information and share it with others is effective. </p>
 
                         <p>Alex Merced has studied a variety of different programming languages (C, C++, C#, Python, Java, Javascript, Ruby, PHP, Go, Clojure and Swift) and is always seeking to learn the basics of more to stay sharp and ahead of market trends. By exploring the links on this website you can find more information about Alex Merced's experience, projects and knowledge. </p></div>
                         
