--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="./front.css">
 </head>
 <body>
-    <header>Alex Merced<br>Full Stack Developer</header>
+    <header><h1>Alex Merced</h1>
+        <h2>Full Stack Developer</h2></header>
 <br><Br>
     <center><iframe width="50%" height="315px" src="https://www.youtube.com/embed/nawRt_xO9U4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
 <Br><Br>
     <main>
     <a href="http://alexmercedcoder.github.io">Merced's Developer<br>Portfolio Page</a>
     <a href="https://spark.adobe.com/page/zj2OlDFEeLGyt/">Alex Merced's<br>Non-Developer Skills</a>
-    <a href="index3.html">AlexMercedCoder.com<br>website</a>
     <a href="https://www.youtube.com/channel/UCoc4UCEetAt3htM3hV1dQgQ">Alex Merced's Explains<br>Computer Science and Programming<br>on Youtube</a>
     <a href="https://open.spotify.com/show/1kMcquypdIElTu4Nu98XPM">Alex Merced's<br>Web Development 101<br>Podcast</a>
     <a href="https://medium.com/@willcodeforfood_96619">Alex Merced's<br>Articles<br>on Medium</a>
