--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
     <header><h1>Alex Merced</h1>
         <h2>Full Stack Developer</h2></header>
-<br><Br>
-    <center><iframe width="50%" height="315px" src="https://www.youtube.com/embed/nawRt_xO9U4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
-<Br><Br>
+
+    <center><iframe width="35%" height="200px" src="https://www.youtube.com/embed/nawRt_xO9U4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+<a href="http://www.linkedin.com/in/alexmerced" class="resume">LINKEDIN/RESUME</a>
     <main>
     <a href="http://alexmercedcoder.github.io">Merced's Developer<br>Portfolio Page</a>
     <a href="https://spark.adobe.com/page/zj2OlDFEeLGyt/">Alex Merced's<br>Non-Developer Skills</a>
