added evevol to app list

--- a/index.html
+++ b/index.html
@@ -11,13 +11,19 @@
     src="https://code.jquery.com/jquery-3.4.1.js"
     integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
     crossorigin="anonymous" defer></script>
+
+    <script src="https://kit.fontawesome.com/39724db188.js" crossorigin="anonymous" defer></script>
+
+
     <script src="./new2.js" defer></script>
             
     <link rel="stylesheet" href="./new2.css">
 </head>
 
 <body>
+  
   <header>
+      <div class="mobilesand"><i class="fas fa-bars"></i></div>
     <nav>
       <a href="https://alexmercedcoder.github.io/">Portfolio/Resume</a>
       <a href="https://github.com/alexmercedcoder">Github</a>
@@ -32,14 +38,34 @@
 
     <h1>Alex Merced</h1>
     <h2>Web Developer</h2>
-    <a href="" class="herobutton">MY Portfolio</a><br><Br>
+    <a href="http://alexmercedcoder.github.io" class="herobutton">MY Portfolio</a><br><Br>
   </header>
   <div class = "brand">
-      In broadcasting, finance and politics I've been known as an effective educator and communicator whether speaking/training in front of voters, candidates, new hires and managing directors. As a web developer I hope to also be a quality educator, communicator and a top-tier creator using my ability to learn, adapt and deliver effectively.
-  </div>
+    In broadcasting, finance, and politics I've been known as an effective educator and communicator whether speaking/training in front of voters, candidates, new hires and managing directors. As a web developer, I am a quality educator, communicator and top-tier creator using my ability to learn, adapt and deliver effectively.  </div>
   <div class="proj">Live Applications</div>
 
   <main>
+
+
+    <div class="cardbody">
+      <img src="evevol.png">
+      <div class="apptitle">EveVol - Event/Volunteers</div>
+      <div class="link">
+        <a href="https://shrouded-beach-63520.herokuapp.com/">APP</a>
+        <a href="https://github.com/AlexMercedCoder/Unit2EveVol">GIT</a>
+      </div>
+      </div>
+
+
+    <div class="cardbody">
+      <img src="amblog.png">
+      <div class="apptitle">Full Stack Blog</div>
+      <div class="link">
+        <a href="https://fierce-waters-95519.herokuapp.com/index">APP</a>
+        <a href="https://github.com/AlexMercedCoder/AlexMercedExpressBlog">GIT</a>
+      </div>
+      </div>
+
 
   <div class="cardbody">
     <img src="pet.jpg">
