--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
   <header>
       <div class="mobilesand"><i class="fas fa-bars"></i></div>
     <nav>
-      <a href="https://alexmercedcoder.github.io/">Portfolio/Resume</a>
+      <a href="https://amstenciljsport.netlify.com/">Portfolio/Resume</a>
       <a href="https://github.com/alexmercedcoder">Github</a>
+      <a href="http://www.linkedin.com/in/alexmerced">LinkedIn</a>
       <a href="https://www.youtube.com/channel/UCoc4UCEetAt3htM3hV1dQgQ">Youtube</a>
       <a href="https://open.spotify.com/show/1kMcquypdIElTu4Nu98XPM">Podcast</a>
-      <a href="https://alexmercedcoder.github.io/alexmerceddevblog">Dev Blog</a>
-      <a href="https://medium.com/@willcodeforfood_96619">Medium Articles</a>
+      <a href="https://medium.com/@alexmercedcoder">Medium Articles</a>
       <a href="https://join.slack.com/t/amwebdev/shared_invite/enQtNzc4NDA3MDU3MDE0LTZjNjIyZmQ3MzA5Y2Q3MWUwZjk3NTIyYjliOThlMWFjNTFkYWM1OGUxN2Y3NGExNGVhOGIzZTg0YTJjZTk5NDA">Dev Networking Slack</a>         
       <a href="https://airtable.com/shrBjmq6BAZLjwsFN">Contact</a>         
 
@@ -38,7 +38,7 @@
 
     <h1>Alex Merced</h1>
     <h2>Web Developer</h2>
-    <a href="http://alexmercedcoder.github.io" class="herobutton">MY Portfolio</a><br><Br>
+    <a href="https://amstenciljsport.netlify.com/" class="herobutton">MY Portfolio</a><br><Br>
   </header>
   <div class = "brand">
     In broadcasting, finance, and politics I've been known as an effective educator and communicator whether speaking/training in front of voters, candidates, new hires and managing directors. As a web developer, I am a quality educator, communicator and top-tier creator using my ability to learn, adapt and deliver effectively.  </div>
