added betterboxd project

--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
 
 
     <div class="cardbody">
+      <img src="https://i.imgur.com/MLcgfsf.png">
+      <div class="apptitle">BetterBoxD</div>
+      <div class="link">
+        <a href="https://betterboxd.herokuapp.com/">APP</a>
+        <a href="https://github.com/Jordan-Morales/betterboxd">GIT</a>
+      </div>
+      </div>
+
+    <div class="cardbody">
       <img src="evevol.png">
       <div class="apptitle">EveVol - Event/Volunteers</div>
       <div class="link">
