basic changes, added button minor button styling

--- a/index.html
+++ b/index.html
@@ -38,11 +38,16 @@
 
     <h1>Alex Merced</h1>
     <h2>Web Developer</h2>
-    <a href="https://amstenciljsport.netlify.com/" class="herobutton">MY Portfolio</a><br><Br>
+    <a href="https://amstenciljsport.netlify.com/" class="herobutton">MY Portfolio</a>
+    <a href="https://amstenciljsport.netlify.com/" class="herobutton">Youtube</a><br><Br>
   </header>
   <div class = "brand">
-    In broadcasting, finance, and politics I've been known as an effective educator and communicator whether speaking/training in front of voters, candidates, new hires and managing directors. As a web developer, I am a quality educator, communicator and top-tier creator using my ability to learn, adapt and deliver effectively.  </div>
-  <div class="proj">Live Applications</div>
+    I love some TLC (Teaching, Learning and Coding). I am a developer always working to expand my technology knowledge and share it with everyone through articles and instructional course. If you need a developer to write code or someone to train your team in new technology, please reach out at Hire@alexmerced.dev. 
+    <br><Br>
+      I specialize in web development whether it be the backend with Node, Django, Lavavel and other frameworks or the frontend with React, Angular, Vue, Stencil or Svelete I am comfortable working my way around a web application. Check out my portfolio for more information and have fun with some of my live applications below. </div>
+    
+  
+    <div class="proj">Live Applications</div>
 
   <main>
 
