--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <header>
       <div class="mobilesand"><i class="fas fa-bars"></i></div>
     <nav>
-      <a href="https://amstenciljsport.netlify.com/">Portfolio/Resume</a>
+      <a href="https://dev.alexmercedcoder.work">Portfolio/Resume</a>
       <a href="https://github.com/alexmercedcoder">Github</a>
       <a href="http://www.linkedin.com/in/alexmerced">LinkedIn</a>
       <a href="https://www.youtube.com/channel/UCoc4UCEetAt3htM3hV1dQgQ">Youtube</a>
@@ -38,11 +38,11 @@
 
     <h1>Alex Merced</h1>
     <h2>Web Developer</h2>
-    <a href="https://amstenciljsport.netlify.com/" class="herobutton">MY Portfolio</a>
-    <a href="https://amstenciljsport.netlify.com/" class="herobutton">Youtube</a><br><Br>
+    <a href="https://dev.alexmercedcoder.work" class="herobutton">MY Portfolio</a>
+    <a href="https://www.youtube.com/channel/UCoc4UCEetAt3htM3hV1dQgQ" class="herobutton">Youtube Channel</a><br><Br>
   </header>
   <div class = "brand">
-    I love some TLC (Teaching, Learning and Coding). I am a developer always working to expand my technology knowledge and share it with everyone through articles and instructional course. If you need a developer to write code or someone to train your team in new technology, please reach out at Hire@alexmerced.dev. 
+    I love some TLC (Teaching, Learning and Coding). I am a developer always working to expand my technology knowledge and share it with everyone through articles and instructional courses. If you need a developer to write code or someone to train your team in new technology, please reach out at Hire@alexmerced.dev. 
     <br><Br>
       I specialize in web development whether it be the backend with Node, Django, Lavavel and other frameworks or the frontend with React, Angular, Vue, Stencil or Svelete I am comfortable working my way around a web application. Check out my portfolio for more information and have fun with some of my live applications below. </div>
     
