added new projects

--- a/index.html
+++ b/index.html
@@ -51,6 +51,23 @@
 
   <main>
 
+    <div class="cardbody">
+      <img src="https://i.imgur.com/vWCc9ot.png">
+      <div class="apptitle">devNursery</div>
+      <div class="link">
+        <a href="https://main.devnursery.com/">APP</a>
+        <a href="https://github.com/AlexMercedCoder/devNurserySvelteBlogApp">GIT</a>
+      </div>
+      </div>
+
+      <div class="cardbody">
+        <img src="https://i.imgur.com/sRcGAXe.png">
+        <div class="apptitle">Savvy Hotspots</div>
+        <div class="link">
+          <a href="https://savvyhotspots.netlify.com/">APP</a>
+          <a href="https://github.com/AlexMercedCoder/SavvyBackendAPI">GIT</a>
+        </div>
+        </div>
 
     <div class="cardbody">
       <img src="https://i.imgur.com/MLcgfsf.png">
